--- a/package.json
+++ b/package.json
@@ -3,12 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^2.0.4",
+    "@heroicons/react": "^2.1.3",
+    "@tailwindcss/forms": "^0.5.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "firebase": "^10.11.1",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-datepicker": "^7.1.0",
     "react-dom": "^18.3.1",
+    "react-google-recaptcha": "^3.1.0",
+    "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
+    "react-tooltip": "^5.27.0",
+    "swal": "^0.1.0",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.10.8",
+    "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -34,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.4.3"
   }
 }
