--- a/package.json
+++ b/package.json
@@ -5,17 +5,27 @@
   "dependencies": {
     "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.3",
+    "@mui/material": "^5.15.21",
     "@tailwindcss/forms": "^0.5.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.7",
+    "cors": "^2.8.5",
+    "dayjs": "^1.11.11",
+    "express": "^4.21.0",
     "firebase": "^10.11.1",
     "moment": "^2.30.1",
+    "node-fetch": "^3.3.2",
     "react": "^18.3.1",
     "react-datepicker": "^7.1.0",
     "react-dom": "^18.3.1",
     "react-google-recaptcha": "^3.1.0",
-    "react-router-dom": "^6.23.0",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^5.3.0",
+    "react-modal": "^3.16.1",
+    "react-rating-stars-component": "^2.2.0",
+    "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "react-tooltip": "^5.27.0",
@@ -50,6 +60,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "tailwindcss": "^3.4.3"
   }
 }
